fix: adds in logos on small screens again

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,12 +2,17 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
-$body-font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$body-font-family: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol";
 $border-radius-root: 30px !default;
 $material-light: (
-  'background': #F1F1FF
+  "background": #f1f1ff,
 );
-
+$card-title-hyphens: auto !default;
+$card-title-overflow-wrap: anywhere !default;
+$card-title-word-break: normal !default;
+$card-title-word-wrap: break-word !default;
 // .img {
 //   border-radius: 30px;
 //   background-color: white;
@@ -15,7 +20,7 @@ $material-light: (
 
 @media only screen and (min-width: 960px) {
   .blog-900 {
-    width:960px;
+    width: 960px;
     max-width: 100%;
   }
 }
@@ -30,7 +35,7 @@ $material-light: (
   border-radius: 100%;
   width: 200px;
   height: 200px;
-  display:inline-block;
+  display: inline-block;
 }
 
 .btn--outlined {
@@ -38,15 +43,15 @@ $material-light: (
 }
 
 .full-width-pink {
-  background: linear-gradient(263.09deg, #FF65BD 0%, #7B7DF6 100%);
+  background: linear-gradient(263.09deg, #ff65bd 0%, #7b7df6 100%);
 }
 
 .full-width-green {
-  background: linear-gradient(83.9deg, #7B7DF6 0%, #3EC1B9 98.75%);
+  background: linear-gradient(83.9deg, #7b7df6 0%, #3ec1b9 98.75%);
 }
 
 .full-width-blue {
-  background: linear-gradient(84.28deg, #7B7DF6 33.68%, #7DD5F6 100%);
+  background: linear-gradient(84.28deg, #7b7df6 33.68%, #7dd5f6 100%);
 }
 
 .shadow {
@@ -63,7 +68,7 @@ $material-light: (
 
 .startups {
   mix-blend-mode: luminosity;
-  display:inline-block;
+  display: inline-block;
   cursor: pointer;
 }
 
@@ -99,7 +104,7 @@ $material-light: (
   &:before {
     content: "“";
     color: #f1f1ff;
-    font-family: Times; 
+    font-family: Times;
     font-size: 4em;
   }
   &:after {
@@ -108,7 +113,7 @@ $material-light: (
     color: #f1f1ff;
     position: absolute;
     top: 100%;
-    font-family: Times; 
+    font-family: Times;
     font-size: 4em;
   }
 }
@@ -117,17 +122,17 @@ $material-light: (
   position: relative;
   &:before {
     content: "“";
-    color: #FF65BD;
-    font-family: Times; 
+    color: #ff65bd;
+    font-family: Times;
     font-size: 4em;
   }
   &:after {
     content: "”";
     padding-left: 8px;
-    color: #FF65BD;
+    color: #ff65bd;
     position: absolute;
     top: 100%;
-    font-family: Times; 
+    font-family: Times;
     font-size: 4em;
   }
 }
@@ -141,15 +146,15 @@ $material-light: (
 
 @media only screen and (max-width: 960px) {
   .fr-video {
-    max-width:100%;
+    max-width: 100%;
 
     > iframe {
-      max-width:100%;
-      height:auto;
+      max-width: 100%;
+      height: auto;
     }
   }
 
   .blog-900 .v-main__wrap p img {
-    max-width:100%;
+    max-width: 100%;
   }
 }
